test/scc/ext/tm/semantic-errors/022.t
void foo(void(*bar)() _Transaction_safe)
{
}

void test()
{
    void(*a)();
    foo(a);
}